2009-05-19  Andi Kleen  <ak@linux.intel.com>
 	* events/i386/atom/events: Use hardcoded counters. Readd
 	UNHALTED_REFERENCE_CLOCK.
 	* events/i386/nehalem/events:
 	* events/i386/nehalem/unit_masks: Use hardcoded counters.
 	Clarify CPU_CLOCKS_UNHALTED.REF_P

2009-05-19 Andi Kleen <ak@linux.intel.com>
 	* libop/op_hw_specific.h: (arch_get_filter):
 	Return -1 when CPUID is not available.

2009-05-18  Brian Bloniarz   <bmb@athenacr.com>

	* libutil/op_file.c: Fix crash when chasing broken symlinks

2009-05-13  Maynard Johnson  <maynardj@us.ibm.com>

	* pp/oparchive.cpp: Fixes for oparchive session-dir as reported in
	  bugs 2646389 and 2646376

2009-05-13  Maynard Johnson  <maynardj@us.ibm.com>

	* utils/opcontrol: Fix for session-dir setup, bug report 2646398

2009-05-13  Brian Bloniarz  <bmb@athenacr.com>

	* utils/opcontrol: Replace bash built-in let with posix statements

2009-05-07  Andi Kleen  <ak@linux.intel.com>
	* utils/ophelp.c:
	* libop/op_cpu_type.c:
	* libop/op_cpu_type.h:
	* libop/op_events.c:
	* libop/op_hw_specific.h: Add workaround_nehalem_aaj79
	* events/Makefile.am:
	* events/i386/atom/events: Add Atom support (New file)
	* events/i386/atom/unit_masks: Add Atom support (New file)
	* events/i386/nehalem/events: Add Nehalem support (New file)
	* events/i386/nehalem/unit_masks: Add Nehalem support (New file)
	* events/i386/core_i7/events: Add Core i7 support (New file)
	* events/i386/core_i7/unit_masks: Add Core i7 support (New file)

2009-05-07  Maynard Johnson  <maynardj@us.ibm.com>

	* oprof-compat/events/Makefile.am:
	* oprof-compat/events/ppc64/ibm-compat-v1/event_mappings: (new)
	* oprof-compat/events/ppc64/ibm-compat-v1/events: (new)
	* oprof-compat/events/ppc64/ibm-compat-v1/unit_masks: (new)
	* oprof-compat/libop/op_cpu_type.c:
	* oprof-compat/libop/op_cpu_type.h:
	* oprof-compat/libop/op_events.c:
	* oprof-compat/utils/ophelp.c:  Add support for IBM ppc64 architected events

2009-05-06  Andi Kleen  <ak@linux.intel.com>
