@@ -1,3 +1,6 @@
+2009-05-19 Andi Kleen  <ak@linux.intel.com>
+ 	* utils/ophelp.c: (cleanup) Fix cleanup crash.
+ 
 2009-05-19  Andi Kleen  <ak@linux.intel.com>
  	* events/i386/atom/events: Use hardcoded counters. Readd
  	UNHALTED_REFERENCE_CLOCK.
